Bug 917496 - Disable GPUAdapterReporter because its values are frequently bogus.  r=Hughman.